--- a/FantasyFighter/FantasyFighter.csproj
+++ b/FantasyFighter/FantasyFighter.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Figgle" Version="0.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FantasyFighter.Engine\FantasyFighter.Engine.csproj" />
+  </ItemGroup>
+
 </Project>
